--- a/cangjie-mcp/Cargo.toml
+++ b/cangjie-mcp/Cargo.toml
@@ -9,6 +9,13 @@ license = "MIT"
 default = []
 local = [
     "dep:fastembed",
+    "fastembed/ort-download-binaries-rustls-tls",
+]
+legacy = [
+    "local",
+    "dep:ort",
+    "dep:ort-tract",
+    "ort/alternative-backend",
 ]
 local-cuda = ["local", "fastembed/cuda"]
 local-cudnn = ["local", "fastembed/cudnn"]
@@ -80,7 +87,9 @@ tokio-lsp = "0.1"
 lsp-types = "0.97"
 
 # Local embedding/reranking (optional)
-fastembed = { version = "5", optional = true, default-features = false, features = ["hf-hub-rustls-tls", "image-models", "ort-download-binaries-rustls-tls"] }
+fastembed = { version = "5", optional = true, default-features = false, features = ["hf-hub-rustls-tls", "image-models"] }
+ort = { version = "=2.0.0-rc.11", optional = true, default-features = false, features = ["std", "ndarray"] }
+ort-tract = { version = "0.2.0", optional = true }
 
 [dev-dependencies]
 tempfile = "3"
