--- a/cangjie-mcp-server/Cargo.toml
+++ b/cangjie-mcp-server/Cargo.toml
@@ -23,7 +23,7 @@ local-accelerate = ["cangjie-mcp/local-accelerate"]
 cangjie-mcp = { path = "../cangjie-mcp" }
 clap = { version = "4", features = ["derive", "env"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
-axum = "0.8"
+axum = { version = "0.8", features = ["http2"] }
 serde_json = "1"
 anyhow = "1"
 tracing = "0.1"
