--- a/cangjie-mcp/Cargo.toml
+++ b/cangjie-mcp/Cargo.toml
@@ -38,8 +38,8 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
 # HTTP client + server
-reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
-axum = "0.8"
+reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "http2"] }
+axum = { version = "0.8", features = ["http2"] }
 tower-http = { version = "0.6", features = ["cors"] }
 
 # BM25 search
