--- a/cangjie-mcp-test/Cargo.toml
+++ b/cangjie-mcp-test/Cargo.toml
@@ -15,3 +15,4 @@ http-body-util = "0.1"
 anyhow = "1"
 async-trait = "0.1"
 rmcp = { version = "0.16", features = ["server", "macros", "schemars"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
