--- a/cangjie-mcp/Cargo.toml
+++ b/cangjie-mcp/Cargo.toml
@@ -82,9 +82,10 @@ sqlite-vec = "0.1.7-alpha.10"
 zerocopy = { version = "0.8", features = ["derive"] }
 
 # LSP support
+shlex = "1"
 toml = "1.0"
-tokio-lsp = "0.1"
 lsp-types = "0.97"
+jsonrpsee = { version = "0.26", features = ["async-client"] }
 
 # Local embedding/reranking (optional)
 fastembed = { version = "5", optional = true, default-features = false, features = ["hf-hub-rustls-tls", "image-models"] }
